--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
   <script src='https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/theme-white/script.js'></script>
 
   <!-- Meta -->
-  <meta content="Your Project" property="og:title">
-  <meta content="Your Project description goes here." name="description">
+  <meta content="Primechain-API Documentation" property="og:title">
+  <meta content="This document explains the Endpoints of Primechain-API." name="description">
 
   <!-- Initializer -->
   <script>
@@ -44,7 +44,7 @@
 
   <div class='header'>
     <div class='left'>
-      <h1>Your Project</h1>
+      <h1>Primechain-API Documentation</h1>
       <ul>
         <li><a href='https://github.com/primechain-dev/primechain-api-docs'>View on GitHub</a></li>
         <li><a href='https://github.com/primechain-dev/primechain-api-docs/issues'>Issues</a></li>
